# YumYumCookies

./: CMakeLists.txt  LICENSE  README.md  ffmpeg_helper.cpp  ffmpeg_helper.h  main.cpp
cmake/: FindFFmpeg.cmake
languages/: loader.cpp
resources/images/: yyc_icon.icns  yyc_icon.xpm
resources/loc/: French.loc
ui/frames/: about.cpp
